test/box_big/part_index.result
lua dofile('part_index.lua')
---
...
lua box.insert(18, 1, 2, 3)
---
 - 1: {2, 3}
...
lua box.insert(18, 1, 2, 3)
---
error: 'Tuple already exists'
...
lua box.select(18, 0, 1)
---
 - 1: {2, 3}
...
lua box.delete(18, 1)
---
 - 1: {2, 3}
...
lua box.insert(19, 1, 2, 3)
---
error: 'Index trigger unknown_function(tuple) error: attempt to call a nil value'
...
lua box.insert(19, 1, 2, 3)
---
error: 'Index trigger unknown_function(tuple) error: attempt to call a nil value'
...
lua box.select(19, 0, 1)
---
...
lua box.insert(20, 1, 2, 3)
---
error: 'Index trigger unknown_function(tuple) error: attempt to call a nil value'
...
lua box.insert(20, 1, 2, 3)
---
error: 'Index trigger unknown_function(tuple) error: attempt to call a nil value'
...
lua box.select(20, 0, 1)
---
...
lua box.insert(21, 1, 2, 3)
---
 - 1: {2, 3}
...
lua box.insert(21, 1, 2, 3)
---
error: 'Tuple already exists'
...
lua box.select(21, 0, 1)
---
 - 1: {2, 3}
...
lua box.select(21, 1, 1)
---
 - 1: {2, 3}
...
lua box.delete(21, 1)
---
 - 1: {2, 3}
...
lua box.insert(22, 1, 2, 3)
---
 - 1: {2, 3}
...
lua box.insert(22, 1, 2, 3)
---
error: 'Tuple already exists'
...
lua box.select(22, 0, 1)
---
 - 1: {2, 3}
...
lua box.select(22, 1, 1)
---
...
lua cleanup_space(22)
---
 - 1
...
lua box.insert(23, 1, 2, 3)
---
 - 1: {2, 3}
...
lua box.select(23, 0, 1)
---
 - 1: {2, 3}
...
lua box.select(23, 1, 1)
---
 - 1: {2, 3}
...
lua box.insert(23, 2, 3, 4)
---
 - 2: {3, 4}
...
lua box.select(23, 0, 2)
---
 - 2: {3, 4}
...
lua box.select(23, 1, 2)
---
 - 2: {3, 4}
...
lua box.insert(23, 3, 11, 12)
---
 - 3: {11, 12}
...
lua box.select(23, 0, 3)
---
 - 3: {11, 12}
...
lua box.select(23, 1, 3)
---
...
lua box.space[23].index[1]:len()
---
 - 2
...
lua box.space[23].index[0]:len()
---
 - 3
...
lua cleanup_space(23)
---
 - 3
...
lua box.insert(24, 1, 2, 3)
---
 - 1: {2, 3}
...
lua box.select(24, 0, 1)
---
 - 1: {2, 3}
...
lua box.select(24, 1, 2)
---
 - 1: {2, 3}
...
lua box.insert(24, 2, 2, 3)
---
 - 2: {2, 3}
...
lua box.select(24, 0, 2)
---
 - 2: {2, 3}
...
lua box.select(24, 1, 2)
---
 - 1: {2, 3}
 - 2: {2, 3}
...
lua box.insert(24, 3, 3, 4)
---
 - 3: {3, 4}
...
lua box.select(24, 0, 3)
---
 - 3: {3, 4}
...
lua box.select(24, 1, 3)
---
 - 3: {3, 4}
...
lua box.insert(24, 4, 13, 4)
---
 - 4: {13, 4}
...
lua box.select(24, 0, 4)
---
 - 4: {13, 4}
...
lua box.select(24, 1, 13)
---
...
lua box.space[24].index[0]:len() - box.space[24].index[1]:len()
---
 - 1
...
lua box.replace(24, 4, 9, 4)
---
 - 4: {9, 4}
...
lua box.select(24, 0, 4)
---
 - 4: {9, 4}
...
lua box.select(24, 1, 9)
---
 - 4: {9, 4}
...
lua box.space[24].index[0]:len() == box.space[24].index[1]:len()
---
 - true
...
lua cleanup_space(24)
---
 - 4
...
